county contact info merge

--- a/data/contact_info/01_merge_in_county_contacts.ipynb
+++ b/data/contact_info/01_merge_in_county_contacts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,14 +81,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "3114it [00:11, 281.58it/s]\n"
+      "3114it [00:10, 283.52it/s]\n"
      ]
     }
    ],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "0      01001    AL    Autauga"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -225,6 +225,18 @@
      "output_type": "stream",
      "text": [
       "Matched 733 previously nofips; 348 still unmatched\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/accounts/projects/vision/.local/lib/python3.7/site-packages/ipykernel_launcher.py:13: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  del sys.path[0]\n"
      ]
     }
    ],
@@ -241,6 +253,7 @@
     "# Finalize \n",
     "df_nofips = df_nofips_tmp\n",
     "df_nofips_matched = df_nofips[df_nofips[\"countyFIPS\"].notnull()]\n",
+    "df_nofips_matched['countyFIPS'] = df_nofips_matched['countyFIPS'].astype(int)\n",
     "df_nofips_unmatched = df_nofips[df_nofips[\"countyFIPS\"].isnull()]\n",
     "\n",
     "print(\"Matched %s previously nofips; %s still unmatched\" % (len(df_nofips_matched), len(df_nofips_unmatched)))"
@@ -248,45 +261,289 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>Header-FIPSStandCtyCode</th>\n",
+       "      <th>EntityofFile</th>\n",
+       "      <th>SecondaryEntityOfFile</th>\n",
+       "      <th>DateofFile</th>\n",
+       "      <th>DateofCreation</th>\n",
+       "      <th>FileLength</th>\n",
+       "      <th>StateName</th>\n",
+       "      <th>StateNameAbbreviation</th>\n",
+       "      <th>CountyName</th>\n",
+       "      <th>...</th>\n",
+       "      <th>#Deaths_3/23/2020</th>\n",
+       "      <th>#Deaths_3/24/2020</th>\n",
+       "      <th>#Deaths_3/25/2020</th>\n",
+       "      <th>#Deaths_3/26/2020</th>\n",
+       "      <th>#Deaths_3/27/2020</th>\n",
+       "      <th>#Deaths_3/28/2020</th>\n",
+       "      <th>deaths</th>\n",
+       "      <th>cases</th>\n",
+       "      <th>tot_deaths</th>\n",
+       "      <th>tot_cases</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2941</th>\n",
+       "      <td></td>\n",
+       "      <td>53033</td>\n",
+       "      <td>AHRF</td>\n",
+       "      <td>53033</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>19212.0</td>\n",
+       "      <td>31661.0</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>WA</td>\n",
+       "      <td>King</td>\n",
+       "      <td>...</td>\n",
+       "      <td>87</td>\n",
+       "      <td>94</td>\n",
+       "      <td>100</td>\n",
+       "      <td>109</td>\n",
+       "      <td>125</td>\n",
+       "      <td>136</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
+       "      <td>136</td>\n",
+       "      <td>2077</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1831</th>\n",
+       "      <td></td>\n",
+       "      <td>36061</td>\n",
+       "      <td>AHRF</td>\n",
+       "      <td>36061</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>19212.0</td>\n",
+       "      <td>31661.0</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>...</td>\n",
+       "      <td>19</td>\n",
+       "      <td>35</td>\n",
+       "      <td>43</td>\n",
+       "      <td>55</td>\n",
+       "      <td>65</td>\n",
+       "      <td>93</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>93</td>\n",
+       "      <td>5237</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1121</th>\n",
+       "      <td></td>\n",
+       "      <td>22071</td>\n",
+       "      <td>AHRF</td>\n",
+       "      <td>22071</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>19212.0</td>\n",
+       "      <td>31661.0</td>\n",
+       "      <td>Louisiana</td>\n",
+       "      <td>LA</td>\n",
+       "      <td>Orleans</td>\n",
+       "      <td>...</td>\n",
+       "      <td>20</td>\n",
+       "      <td>26</td>\n",
+       "      <td>37</td>\n",
+       "      <td>46</td>\n",
+       "      <td>57</td>\n",
+       "      <td>70</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1298</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1285</th>\n",
+       "      <td></td>\n",
+       "      <td>26163</td>\n",
+       "      <td>AHRF</td>\n",
+       "      <td>26163</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>19212.0</td>\n",
+       "      <td>31661.0</td>\n",
+       "      <td>Michigan</td>\n",
+       "      <td>MI</td>\n",
+       "      <td>Wayne</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8</td>\n",
+       "      <td>13</td>\n",
+       "      <td>21</td>\n",
+       "      <td>26</td>\n",
+       "      <td>37</td>\n",
+       "      <td>46</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>46</td>\n",
+       "      <td>2316</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1852</th>\n",
+       "      <td></td>\n",
+       "      <td>36103</td>\n",
+       "      <td>AHRF</td>\n",
+       "      <td>36103</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>19212.0</td>\n",
+       "      <td>31661.0</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>Suffolk</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>17</td>\n",
+       "      <td>20</td>\n",
+       "      <td>22</td>\n",
+       "      <td>30</td>\n",
+       "      <td>37</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>37</td>\n",
+       "      <td>4138</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 7322 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     id Header-FIPSStandCtyCode EntityofFile SecondaryEntityOfFile DateofFile  \\\n",
+       "2941                      53033         AHRF                 53033       2019   \n",
+       "1831                      36061         AHRF                 36061       2019   \n",
+       "1121                      22071         AHRF                 22071       2019   \n",
+       "1285                      26163         AHRF                 26163       2019   \n",
+       "1852                      36103         AHRF                 36103       2019   \n",
+       "\n",
+       "      DateofCreation  FileLength   StateName StateNameAbbreviation CountyName  \\\n",
+       "2941         19212.0     31661.0  Washington                    WA       King   \n",
+       "1831         19212.0     31661.0    New York                    NY   New York   \n",
+       "1121         19212.0     31661.0   Louisiana                    LA    Orleans   \n",
+       "1285         19212.0     31661.0    Michigan                    MI      Wayne   \n",
+       "1852         19212.0     31661.0    New York                    NY    Suffolk   \n",
+       "\n",
+       "      ... #Deaths_3/23/2020 #Deaths_3/24/2020 #Deaths_3/25/2020  \\\n",
+       "2941  ...                87                94               100   \n",
+       "1831  ...                19                35                43   \n",
+       "1121  ...                20                26                37   \n",
+       "1285  ...                 8                13                21   \n",
+       "1852  ...                 4                17                20   \n",
+       "\n",
+       "     #Deaths_3/26/2020 #Deaths_3/27/2020 #Deaths_3/28/2020  \\\n",
+       "2941               109               125               136   \n",
+       "1831                55                65                93   \n",
+       "1121                46                57                70   \n",
+       "1285                26                37                46   \n",
+       "1852                22                30                37   \n",
+       "\n",
+       "                                                 deaths  \\\n",
+       "2941  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "1831  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "1121  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "1285  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "1852  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "\n",
+       "                                                  cases tot_deaths tot_cases  \n",
+       "2941  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...        136      2077  \n",
+       "1831  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...         93      5237  \n",
+       "1121  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...         70      1298  \n",
+       "1285  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...         46      2316  \n",
+       "1852  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...         37      4138  \n",
+       "\n",
+       "[5 rows x 7322 columns]"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_matched.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_nofips_matched = pd.merge(df_nofips_matched, df_covid, on='countyFIPS', how='left')"
+    "df_nofips_matched = pd.merge(df_nofips_matched, df_covid, on='countyFIPS', how='left')\n",
+    "df_matched_full = pd.merge(df_matched, df_nofips_matched, on='countyFIPS', how='outer')\n",
+    "# df_full = pddf_nofips_unmatched.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_tot = pd.merge(df_matched, df_nofips_matched, on='countyFIPS', how='outer')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "matched 3067 nocontact 812 nofips 1081\n"
+     ]
+    }
+   ],
    "source": [
     "# We only need these columns, let's append them\n",
     "df_matched = df_matched[['CountyName', 'StateName', 'countyFIPS', 'HealthDeptName', 'HealthDeptContact', 'tot_deaths']]\n",
     "df_nofips_matched = df_nofips_matched[['CountyName', 'StateName', 'countyFIPS', 'HealthDeptName', 'HealthDeptContact', 'tot_deaths']]\n",
     "df_matched = df_matched.append(df_nofips_matched)\n",
-    "# print('matched', df_matched.shape[0], 'nocontact', df_nocontact.shape[0],\n",
-    "#       'nofips', df_nofips.shape[0])\n",
+    "print('matched', df_matched.shape[0], 'nocontact', df_nocontact.shape[0],\n",
+    "      'nofips', df_nofips.shape[0])\n",
     "# Update df_nofips to be currently unmatched\n",
     "df_nofips = df_nofips_unmatched"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['CountyName', 'StateName', 'countyFIPS', 'HealthDeptName',\n",
+       "       'HealthDeptContact', 'tot_deaths'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_matched.keys()"
    ]
   },
   {
@@ -298,12 +555,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pygsheets\n",
-    "gc = pygsheets.authorize(service_file='../creds.json')\n",
+    "gc = pygsheets.authorize(service_file='../../creds.json')\n",
     "\n",
     "#open the google spreadsheet (where 'PY to Gsheet Test' is the name of my sheet)\n",
     "sheet_name = 'Contact info'\n",
@@ -312,14 +569,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/accounts/projects/vision/.local/lib/python3.7/site-packages/pygsheets/worksheet.py:1304: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  df[col] = df[col].astype('unicode').replace('<NA>', nan)\n"
+     ]
+    }
+   ],
    "source": [
+    "ks = ['CountyName', 'StateName', 'countyFIPS', 'HealthDeptName', 'HealthDeptContact']\n",
     "wks = sh[1]\n",
     "wks.update_value('A1', \"County-level contact information, scraped from here: https://www.naccho.org/membership/lhd-directory\")\n",
     "# wks.update_value('A2', \"Columns A-E are read-only\")\n",
-    "wks.set_dataframe(df_matched[['CountyName', 'StateName', 'countyFIPS', 'HealthDeptName', 'HealthDeptContact']], (5, 1))"
+    "wks.set_dataframe(df_matched[ks], (5, 1))"
    ]
   },
   {
