Poisson glm corner cases

--- a/modeling/basic_model_framework.ipynb
+++ b/modeling/basic_model_framework.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [
     {
@@ -59,12 +59,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 436,
    "metadata": {},
    "outputs": [],
    "source": [
     "aggregate_by_state = False\n",
-    "outcome_type = 'cases'\n",
+    "outcome_type = 'deaths'\n",
     "evaluation_criteria = 'predict current day' #Out of ['hold out counties','predict current day']"
    ]
   },
@@ -86,13 +86,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 'deaths' and 'cases' contain the time-series of the outbreak\n",
     "df = load_data.load_county_level(data_dir = '../data/')\n",
-    "# df = df.sort_values(load_data.outcome_deaths, ascending=False)\n",
+    "df = df.sort_values('#Deaths_3/28/2020', ascending=False)\n",
     "# outcome_cases = load_data.outcome_cases # most recent day\n",
     "# outcome_deaths = load_data.outcome_deaths\n",
     "important_vars = load_data.important_keys(df)\n",
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 437,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,19 +435,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 438,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['predicted_cases_exponential_1',\n",
-       " 'predicted_cases_shared_exponential_1',\n",
-       " 'predicted_cases_shared_exponential_1_demographics',\n",
-       " 'predicted_cases_ensemble_1']"
+       "['predicted_deaths_exponential_1',\n",
+       " 'predicted_deaths_shared_exponential_1',\n",
+       " 'predicted_deaths_shared_exponential_1_demographics',\n",
+       " 'predicted_deaths_ensemble_1']"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 438,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 439,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,26 +510,55 @@
     "    return sum([np.abs(a1-a2) for (a1,a2) in zip(arr1,arr2)])/len(arr1)\n",
     "mse = sklearn.metrics.mean_squared_error\n",
     "# Only evaluate points that exceed this number of deaths \n",
-    "lower_threshold, upper_threshold = 0, 10000"
+    "lower_threshold, upper_threshold = 10, 1000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 440,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Log scale MSE for predicted_cases_exponential_1\n",
-      "0.12102336968601766\n",
-      "Log scale MSE for predicted_cases_shared_exponential_1\n",
-      "0.12025551043864925\n",
-      "Log scale MSE for predicted_cases_shared_exponential_1_demographics\n",
-      "0.11994405309256845\n",
-      "Log scale MSE for predicted_cases_ensemble_1\n",
-      "0.07480482715749269\n"
+      "Log scale MSE for predicted_deaths_exponential_1\n",
+      "0.02666909884495665\n",
+      "Log scale MSE for predicted_deaths_shared_exponential_1\n",
+      "0.01857497343862324\n",
+      "Log scale MSE for predicted_deaths_shared_exponential_1_demographics\n",
+      "0.01936122150664412\n",
+      "Log scale MSE for predicted_deaths_ensemble_1\n",
+      "0.011513570984591864\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Log scaled\n",
+    "outcome = np.array([df[outcome_type].values[i][-1] for i in range(len(df))])\n",
+    "for key in method_keys:\n",
+    "    preds = [np.log(p[-1] + 1) for p in test_df[key][(outcome > lower_threshold) * (outcome < upper_threshold)]]\n",
+    "    print('Log scale MSE for '+key)\n",
+    "    print(mse(np.log(outcome[(outcome > lower_threshold) * (outcome < upper_threshold)] + 1),preds))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 441,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Log scale l1 for predicted_deaths_exponential_1\n",
+      "0.11795418750483459\n",
+      "Log scale l1 for predicted_deaths_shared_exponential_1\n",
+      "0.09775921675155456\n",
+      "Log scale l1 for predicted_deaths_shared_exponential_1_demographics\n",
+      "0.11536489764635105\n",
+      "Log scale l1 for predicted_deaths_ensemble_1\n",
+      "0.08732483695399444\n"
      ]
     }
    ],
@@ -538,56 +567,27 @@
     "outcome = np.array([df[outcome_type].values[i][-1] for i in range(len(df))])\n",
     "for key in method_keys:\n",
     "    preds = [np.log(p[-1] + 1) for p in test_df[key][outcome > lower_threshold]]\n",
-    "    print('Log scale MSE for '+key)\n",
-    "    print(mse(np.log(outcome[outcome > lower_threshold] + 1),preds))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Log scale l1 for predicted_cases_exponential_1\n",
-      "0.20819092117312793\n",
-      "Log scale l1 for predicted_cases_shared_exponential_1\n",
-      "0.2867931783847643\n",
-      "Log scale l1 for predicted_cases_shared_exponential_1_demographics\n",
-      "0.2856855812580688\n",
-      "Log scale l1 for predicted_cases_ensemble_1\n",
-      "0.20426967310902244\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Log scaled\n",
-    "outcome = np.array([df[outcome_type].values[i][-1] for i in range(len(df))])\n",
-    "for key in method_keys:\n",
-    "    preds = [np.log(p[-1] + 1) for p in test_df[key][upper_threshold > outcome]]\n",
     "    print('Log scale l1 for '+key)\n",
-    "    print(l1(np.log(outcome[upper_threshold > outcome] + 1),preds))"
+    "    print(l1(np.log(outcome[outcome > lower_threshold] + 1),preds))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 442,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Raw MSE for predicted_cases_exponential_1\n",
-      "315.9919406180466\n",
-      "Raw MSE for predicted_cases_shared_exponential_1\n",
-      "61.949618826477064\n",
-      "Raw MSE for predicted_cases_shared_exponential_1_demographics\n",
-      "55.744301002936595\n",
-      "Raw MSE for predicted_cases_ensemble_1\n",
-      "80.51549292798579\n"
+      "Raw MSE for predicted_deaths_exponential_1\n",
+      "38.998782116290165\n",
+      "Raw MSE for predicted_deaths_shared_exponential_1\n",
+      "244.73927295667258\n",
+      "Raw MSE for predicted_deaths_shared_exponential_1_demographics\n",
+      "138.5564235781786\n",
+      "Raw MSE for predicted_deaths_ensemble_1\n",
+      "60.212478497147586\n"
      ]
     }
    ],
@@ -595,28 +595,28 @@
     "# No log scale\n",
     "outcome = np.array([df[outcome_type].values[i][-1] for i in range(len(df))])\n",
     "for key in method_keys:\n",
-    "    preds = [p[-1] for p in test_df[key][upper_threshold > outcome]]\n",
+    "    preds = [p[-1] for p in test_df[key][outcome > lower_threshold]]\n",
     "    print('Raw MSE for '+key)\n",
-    "    print(mse(outcome[upper_threshold > outcome],preds))"
+    "    print(mse(outcome[outcome > lower_threshold],preds))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 383,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Raw l1 for predicted_cases_exponential_1\n",
-      "4.877119991936114\n",
-      "Raw l1 for predicted_cases_shared_exponential_1\n",
-      "3.3981134275197515\n",
-      "Raw l1 for predicted_cases_shared_exponential_1_demographics\n",
-      "3.2623110121894587\n",
-      "Raw l1 for predicted_cases_ensemble_1\n",
-      "3.2078298122010405\n"
+      "Raw l1 for predicted_deaths_exponential_1\n",
+      "4.4821776517777145\n",
+      "Raw l1 for predicted_deaths_shared_exponential_1\n",
+      "7.316085229859571\n",
+      "Raw l1 for predicted_deaths_shared_exponential_1_demographics\n",
+      "6.675964947857575\n",
+      "Raw l1 for predicted_deaths_ensemble_1\n",
+      "4.365181870918347\n"
      ]
     }
    ],
@@ -624,9 +624,9 @@
     "# No log scale\n",
     "outcome = np.array([df[outcome_type].values[i][-1] for i in range(len(df))])\n",
     "for key in method_keys:\n",
-    "    preds = [p[-1] for p in test_df[key][upper_threshold > outcome]]\n",
+    "    preds = [p[-1] for p in test_df[key][outcome > lower_threshold]]\n",
     "    print('Raw l1 for '+key)\n",
-    "    print(l1(outcome[upper_threshold > outcome],preds))"
+    "    print(l1(outcome[outcome > lower_threshold],preds))"
    ]
   },
   {
